start creating delete form

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,9 @@
 {% block title %}Show tasks{% endblock %}
 
 {% block content %}
-    {% block index %}
     {% if todos %}
         {% for todo in todos %}
             {% if todo.state %}
-                <form method="POST">
                     <div class="card border-success mb-3" style="max-width: 40rem; margin: 0 auto; margin-top: 20px;">
                         <div class="card-header" style="text-align: center;">{{ todo.title }}</div>
                         <div class="card-body">
@@ -23,11 +21,10 @@
                             <b class="card-text">Status:</b>
                             <p class="card-text">Done</p>
                             <a href="{% url 'update_todo' todo.id %}" class="btn btn-info" style="width: 120px; height: 50px; margin-left: 120px; margin-top: 10px;">Edit task</a>
+                            <a href="{% url 'delete_todo' todo.id %}" class="btn btn-primary" style="width: 120px; height: 50px; margin-left: 120px; margin-top: 10px;">Delete task</a>
                         </div>
                     </div>
-                </form>
             {% else %}
-                <form method="POST">
                     <div class="card border-danger mb-3" style="max-width: 40rem; margin: 0 auto; margin-top: 20px;">
                         <div class="card-header" style="text-align: center;">{{ todo.title }}</div>
                         <div class="card-body">
@@ -44,18 +41,15 @@
                             <b class="card-text">Status:</b>
                             <p class="card-text">Not Done</p>
                             <a href="{% url 'update_todo' todo.id %}" class="btn btn-info" style="width: 120px; height: 50px; margin-left: 120px; margin-top: 10px;">Edit task</a>
+                            <a href="{% url 'delete_todo' todo.id %}" class="btn btn-primary" style="width: 120px; height: 50px; margin-left: 120px; margin-top: 10px;">Delete task</a>
                         </div>
                     </div>
-                </form>
             {% endif %}
         {% endfor %}
     {% else %}
-        <form method="POST">
             <div class="alert alert-dismissible alert-warning" style="max-width: 30rem; margin: 0 auto; margin-top: 20px;">
                 <h4 class="alert-heading" style="text-align: center; margin-left: 70px;">No tasks for today!</h4>
-                <a href="{% url 'update_todo' todo.id %}" class="btn btn-warning" style="margin-left: 120px; margin-top: 10px;">Create new task</a>
+                <a href="{% url 'create_todo' %}" class="btn btn-warning" style="margin-left: 120px; margin-top: 10px;">Create new task</a>
             </div>
-        </form>
     {% endif %}
-    {% endblock %}
 {% endblock %}
